force-app/main/default/objects/Case/fields/Case_Type_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Type_Reason__c</fullName>
    <description>Reason picklist based on Case Type</description>
    <label>Case Type Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Request_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Family Matter</fullName>
            </value>
            <value>
                <fullName>Financial Problem</fullName>
            </value>
            <value>
                <fullName>Have Many Insurance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sosmed Cases</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>