force-app/main/default/objects/Case/fields/Cause_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Cause_Complaint__c</fullName>
    <label>Cause Complaint</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Complaint_Validity__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metode pembayaran dan biaya</fullName>
            </value>
            <value>
                <fullName>Resiko asuransi dan unitlink</fullName>
            </value>
            <value>
                <fullName>Pinalty penarikan dana</fullName>
            </value>
            <value>
                <fullName>Pinalty Pendebetan Renewal Autosurrender</fullName>
            </value>
            <value>
                <fullName>Kesesuaian Produk</fullName>
            </value>
            <value>
                <fullName>Periode kepesertaan polis</fullName>
            </value>
            <value>
                <fullName>Penggunan Kartu Kesehatan</fullName>
            </value>
            <value>
                <fullName>Proses Claim</fullName>
            </value>
            <value>
                <fullName>Proses Re UW</fullName>
            </value>
            <value>
                <fullName>Pemalsuan Tanda tangan</fullName>
            </value>
            <value>
                <fullName>Pemalsuan Data</fullName>
            </value>
            <value>
                <fullName>Penggelapan dana</fullName>
            </value>
            <value>
                <fullName>Produk Telemarketing</fullName>
            </value>
            <value>
                <fullName>Delay proses</fullName>
            </value>
            <value>
                <fullName>Premi terdebet</fullName>
            </value>
            <value>
                <fullName>Status Polis</fullName>
            </value>
            <value>
                <fullName>Wrong capture</fullName>
            </value>
            <value>
                <fullName>Reinstatement Policy</fullName>
            </value>
            <value>
                <fullName>Wrong Decision</fullName>
            </value>
            <value>
                <fullName>PEC</fullName>
            </value>
            <value>
                <fullName>Klaim delay</fullName>
            </value>
            <value>
                <fullName>Klaim yang ditolak</fullName>
            </value>
            <value>
                <fullName>Diterima oleh oleh orang lain yang Nasabah tidak kenal</fullName>
            </value>
            <value>
                <fullName>Alamat retur dan tidak ada konfirmasi lanjutan dari AMFS</fullName>
            </value>
            <value>
                <fullName>Kurir tidak dapat memberikan investigasi sesuai SLA</fullName>
            </value>
            <value>
                <fullName>Kurir tidak mengirimkan buku Polis ke alamat Nasabah</fullName>
            </value>
            <value>
                <fullName>Soft Complaint</fullName>
            </value>
            <value>
                <fullName>Double Create</fullName>
            </value>
            <value>
                <fullName>Nasabah meminta kebijakan</fullName>
            </value>
            <value>
                <fullName>Nasabah tidak mengerti dengan detail produk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>