force-app/main/default/objects/Case/fields/Complainant__c.field-meta.xml
<CustomField>
    <fullName>Complainant__c</fullName>
    <label>Complainant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>MTF</fullName>
            </value>
            <value>
                <fullName>Bank Mandiri</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>FA</fullName>
            </value>
            <value>
                <fullName>SO</fullName>
            </value>
            <value>
                <fullName>CCC</fullName>
            </value>
            <value>
                <fullName>Back-Office</fullName>
            </value>
            <value>
                <fullName>Branches</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>LP</fullName>
            </value>
            <value>
                <fullName>SL</fullName>
            </value>
            <value>
                <fullName>BM</fullName>
            </value>
            <value>
                <fullName>BP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>