force-app/main/default/objects/Case/fields/Insurance_Type_AFI__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type_AFI__c</fullName>
    <description>Insurance Type for AFI</description>
    <label>Insurance Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_AFI2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Life</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>