force-app/main/default/objects/Case/fields/Non_Active_Queue_ID__c.field-meta.xml
<CustomField>
    <fullName>Non_Active_Queue_ID__c</fullName>
    <formula>IF(First_Queue_ID__c != &apos;&apos; &amp;&amp; First_Queue_ID__c == &apos;00G0K000004ggVBUAY&apos;, &apos;00G0K000004ggVG&apos;,
IF(First_Queue_ID__c != &apos;&apos; &amp;&amp; First_Queue_ID__c == &apos;00G0K000004ggW4UAI&apos;, &apos;00G0K000004ggVz&apos;,
IF(First_Queue_ID__c != &apos;&apos; &amp;&amp; First_Queue_ID__c == &apos;00G0K000004ggUwUAI&apos;, &apos;00G0K000004ggV1&apos;,
IF(First_Queue_ID__c != &apos;&apos; &amp;&amp; First_Queue_ID__c == &apos;00G0K000004ggVuUAI&apos;, &apos;00G0K000004ggVp&apos;,
IF(First_Queue_ID__c != &apos;&apos; &amp;&amp; First_Queue_ID__c == &apos;00G0K000004ggVkUAI&apos;, &apos;00G0K000004ggVf&apos;,
IF(First_Queue_ID__c != &apos;&apos; &amp;&amp; First_Queue_ID__c == &apos;00G0K000004ggVQUAY&apos;, &apos;00G0K000004ggVL&apos;,
IF(First_Queue_ID__c != &apos;&apos; &amp;&amp; First_Queue_ID__c == &apos;00G0K000004ggVaUAI&apos;, &apos;00G0K000004ggVV&apos;,
IF(First_Queue_ID__c != &apos;&apos; &amp;&amp; First_Queue_ID__c == &apos;00G0K000004ggW9UAI&apos;, &apos;00G0K000004ggWE&apos;,
IF(First_Queue_ID__c != &apos;&apos; &amp;&amp; First_Queue_ID__c == &apos;00GId000000QNJCMA4&apos;, &apos;00GfQ00000CJ14j&apos;,
 &apos;Have not Non Active Queue&apos;) ) ) ) ) ) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non Active Queue ID</label>
    <type>Text</type>
</CustomField>