force-app/main/default/objects/Case/fields/Product_AFI2__c.field-meta.xml
<CustomField>
    <fullName>Product_AFI2__c</fullName>
    <label>Product AFI</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Line_Queue__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ASURANSI JIWA KREDIT (KPR)</fullName>
            </value>
            <value>
                <fullName>ATTANIA LINK SYARIAH</fullName>
            </value>
            <value>
                <fullName>AXA CANCER &amp; SAVE</fullName>
            </value>
            <value>
                <fullName>AXA CARE PROTECTION</fullName>
            </value>
            <value>
                <fullName>AXA CREDIT LIFE PLUS</fullName>
            </value>
            <value>
                <fullName>AXA CRITICAL ELITE SOLUTION</fullName>
            </value>
            <value>
                <fullName>AXA CRITICAL PROTECTOR</fullName>
            </value>
            <value>
                <fullName>AXA FUTURE PROTECTOR</fullName>
            </value>
            <value>
                <fullName>AXA GOOD HEALTH</fullName>
            </value>
            <value>
                <fullName>AXA HEALTH &amp; SAVE</fullName>
            </value>
            <value>
                <fullName>AXA HEALTH PROTECTOR</fullName>
            </value>
            <value>
                <fullName>AXA HEART &amp; SAVE</fullName>
            </value>
            <value>
                <fullName>AXA HOSPITAL &amp; SAVE</fullName>
            </value>
            <value>
                <fullName>AXA HOSPITAL EXTRA</fullName>
            </value>
            <value>
                <fullName>AXA HOSPITAL PLUS LIFE</fullName>
            </value>
            <value>
                <fullName>AXA LIFE &amp; SAVE</fullName>
            </value>
            <value>
                <fullName>AXA LINK PROTECTOR</fullName>
            </value>
            <value>
                <fullName>AXA LONG TERM LIFE PROTECTOR</fullName>
            </value>
            <value>
                <fullName>AXA MAGNIFICENT ELITE LINK</fullName>
            </value>
            <value>
                <fullName>AXA MAGNIFICENT EXECUTIVE LINK</fullName>
            </value>
            <value>
                <fullName>AXA MEDICASH PRO SEVEN</fullName>
            </value>
            <value>
                <fullName>AXA PROTECTION &amp; SAVE</fullName>
            </value>
            <value>
                <fullName>AXA SAHABAT AMAN</fullName>
            </value>
            <value>
                <fullName>AXA SAHABAT JIWA</fullName>
            </value>
            <value>
                <fullName>AXA SAHABAT SEHAT</fullName>
            </value>
            <value>
                <fullName>AXA SIGNATURE LINK</fullName>
            </value>
            <value>
                <fullName>AXA SMART EDU PROTECTOR</fullName>
            </value>
            <value>
                <fullName>AXA SYARIAH PLAN &amp; SAVE</fullName>
            </value>
            <value>
                <fullName>AXA TERM PROTECTOR</fullName>
            </value>
            <value>
                <fullName>AXA WEALTH PROTECTOR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>