force-app/main/default/objects/Case/fields/QR_Status__c.field-meta.xml
<CustomField>
    <fullName>QR_Status__c</fullName>
    <description>Quick response request status</description>
    <label>Agent Response Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Unread</fullName>
                <default>true</default>
                <label>Unread</label>
            </value>
            <value>
                <fullName>Read</fullName>
            </value>
            <value>
                <fullName>Replied</fullName>
            </value>
            <value>
                <fullName>Forwarded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>