force-app/main/default/objects/Case/fields/Related_Departments__c.field-meta.xml
<CustomField>
    <fullName>Related_Departments__c</fullName>
    <label>Related Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>CLAIM</fullName>
            </value>
            <value>
                <fullName>FIN</fullName>
            </value>
            <value>
                <fullName>NB/UW</fullName>
            </value>
            <value>
                <fullName>ADS</fullName>
            </value>
            <value>
                <fullName>Operation</fullName>
            </value>
            <value>
                <fullName>CO</fullName>
            </value>
            <value>
                <fullName>CCC</fullName>
            </value>
            <value>
                <fullName>CMU</fullName>
            </value>
            <value>
                <fullName>Collection</fullName>
            </value>
            <value>
                <fullName>Collection &amp; CR</fullName>
            </value>
            <value>
                <fullName>DMU</fullName>
            </value>
            <value>
                <fullName>DPLK</fullName>
            </value>
            <value>
                <fullName>Tele Services</fullName>
            </value>
            <value>
                <fullName>Walk In/RO</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Komisi dan Benefit</fullName>
            </value>
            <value>
                <fullName>Group Benefit</fullName>
            </value>
            <value>
                <fullName>TFC</fullName>
            </value>
            <value>
                <fullName>Customer Retention</fullName>
            </value>
            <value>
                <fullName>Orphan</fullName>
            </value>
            <value>
                <fullName>Legal /Compliance</fullName>
            </value>
            <value>
                <fullName>Marketing dan Comunication</fullName>
            </value>
            <value>
                <fullName>VDM</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Corpsol</fullName>
            </value>
            <value>
                <fullName>Data Stewardes</fullName>
            </value>
            <value>
                <fullName>Quick Response</fullName>
            </value>
            <value>
                <fullName>ComBen</fullName>
            </value>
            <value>
                <fullName>Portofolio Syariah</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>