force-app/main/default/objects/Case/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <description>Request type, new field for Case_Type__c with AMFS Entity. To determine type case. Dependent with field Unit__c</description>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Related_Departments__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Request_ADS - Perubahan Alamat Email</fullName>
            </value>
            <value>
                <fullName>Request_ADS - Perubahan DOB</fullName>
            </value>
            <value>
                <fullName>Request_ADS - Perubahan Ejaan nama</fullName>
            </value>
            <value>
                <fullName>Request_ADS - Perubahan Frekuensi Pembayaran</fullName>
            </value>
            <value>
                <fullName>Request_ADS - Perubahan Gender</fullName>
            </value>
            <value>
                <fullName>Request_ADS - Perubahan Relationship</fullName>
            </value>
            <value>
                <fullName>Request_ADS - Perubahan Title</fullName>
            </value>
            <value>
                <fullName>Request_ADS - Rekening Penerimaan NCB</fullName>
            </value>
            <value>
                <fullName>Request_ADS Duplikat Kartu</fullName>
            </value>
            <value>
                <fullName>Request_ADS Pemulihan Polis</fullName>
            </value>
            <value>
                <fullName>Request_ADS_Confirmation Financial</fullName>
            </value>
            <value>
                <fullName>Request_ADS_Confirmation Non Financial</fullName>
            </value>
            <value>
                <fullName>Request_ADS_Document NCB</fullName>
            </value>
            <value>
                <fullName>Request_ADS_Duplikat Buku Polis TM</fullName>
            </value>
            <value>
                <fullName>Request_ADS_Perubahan Ahli waris</fullName>
            </value>
            <value>
                <fullName>Request_ADS_Perubahan Data Pertanggungan</fullName>
            </value>
            <value>
                <fullName>Request_ADS_Perubahan ID KTP</fullName>
            </value>
            <value>
                <fullName>Request_ADS_Perubahan Nomor Kontak</fullName>
            </value>
            <value>
                <fullName>Request_ADS_Perubahan Pemegang Polis</fullName>
            </value>
            <value>
                <fullName>Request_ADS_Perubahan SKDKK</fullName>
            </value>
            <value>
                <fullName>Request_ADS_Perubahan SKDR</fullName>
            </value>
            <value>
                <fullName>Request_ADS_Refund Premi</fullName>
            </value>
            <value>
                <fullName>Request_ADS_Reprint Kartu TM</fullName>
            </value>
            <value>
                <fullName>Request_ADS_Reprint Polis TM</fullName>
            </value>
            <value>
                <fullName>Request_ADS_Submit kelengkapan dok ADS</fullName>
            </value>
            <value>
                <fullName>Request_ADS_Transfer Tolakan NCB</fullName>
            </value>
            <value>
                <fullName>Request-Printing New Policy DMTM</fullName>
            </value>
            <value>
                <fullName>Request_ADS_Reprint Polis &amp; Kartu TM</fullName>
            </value>
            <value>
                <fullName>Request _Form NB / After Sales</fullName>
            </value>
            <value>
                <fullName>Request _Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>